argocd/argocd-server_Ingress_argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: 'true'
    kubernetes.io/tls-acme: 'true'
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: v3.4.2
    helm.sh/chart: argo-cd-9.5.15
  name: argocd-server
  namespace: argocd
spec:
  ingressClassName: cilium
  rules:
  - host: argo.ocf.berkeley.edu
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - argo.ocf.berkeley.edu
    secretName: argocd-server-tls
